# FastTools2D

./: .gitignore  README.md
FMM/StokesDLP/: laprouts2d.f  makefile  stokesDLP.f  stokesDLPfmm.F
FMM/StokesSLP/: cfmm2dpart.f  makefile  stokesSLP.f  testCall.m
FMM/src/StokesDLP/: makefile
FMM/src/StokesSLP/: d2tstrcr_omp.f  lfmm2drouts.f  makefile  prini.f  stokesSLPfmm.F  testCall.f
FMM/tests/: SLP_FMM_test.m  stokes_DLP_FMM_test.m  stokes_SLP_FMM_test.m  stresslet_identity_test.m
PeriodicEwald/: README.md
PeriodicEwald/src/: CMakeLists.txt  README.md
PeriodicEwald/src/matlab/: StokesDLP_ewald_2p.m  StokesDLP_gradient_ewald_2p.m  StokesDLP_pressure_ewald_2p.m  StokesDLP_pressure_grad_ewald_2p.m  StokesDLP_stress_ewald_2p.m  StokesDLP_vorticity_ewald_2p.asv  StokesDLP_vorticity_ewald_2p.m  StokesSLP_ewald_2p.m  StokesSLP_gradient_ewald_2p.m  StokesSLP_pressure_ewald_2p.m  StokesSLP_pressure_grad_ewald_2p.m  StokesSLP_stress_ewald_2p.m  StokesSLP_vorticity_ewald_2p.m  set_ewaldparam_K0_2p.m
PeriodicEwald/src/matlab/ewald/: StokesDLP_ewald_2p.m  StokesSLP_ewald_2p.m  se_K0_2p.m
PeriodicEwald/src/matlab/ewald/tools/: se_scaling.m  set_prm_ewald.m
PeriodicEwald/src/matlab/tools/: domSetup.m  plotdmn.m
PeriodicEwald/src/mex/: CMakeLists.txt  ewald_tools.h  mex_K0_real.cpp  mex_se_K0_2p_quadrature.c  mex_se_K0_2p_spreading.c
PeriodicEwald/src/mex/K0/: CMakeLists.txt  mex_compK0xy.cpp
PeriodicEwald/src/mex/StokesDLP/: CMakeLists.txt  mex_stokes_dlp_gradient_kspace.cpp  mex_stokes_dlp_gradient_real.cpp  mex_stokes_dlp_kspace.cpp  mex_stokes_dlp_pressure_grad_kspace.cpp  mex_stokes_dlp_pressure_grad_real.cpp  mex_stokes_dlp_pressure_kspace.cpp  mex_stokes_dlp_pressure_real.cpp  mex_stokes_dlp_real.cpp  mex_stokes_dlp_stress_kspace.cpp  mex_stokes_dlp_stress_real.cpp  mex_stokes_dlp_vorticity_kspace.asv  mex_stokes_dlp_vorticity_kspace.cpp  mex_stokes_dlp_vorticity_real.cpp
PeriodicEwald/src/mex/StokesSLP/: CMakeLists.txt  mex_stokes_slp_gradient_kspace.cpp  mex_stokes_slp_gradient_kspace_old.cpp  mex_stokes_slp_gradient_real.cpp  mex_stokes_slp_kspace.cpp  mex_stokes_slp_pressure_grad_kspace.cpp  mex_stokes_slp_pressure_grad_real.cpp  mex_stokes_slp_pressure_kspace.cpp  mex_stokes_slp_pressure_real.cpp  mex_stokes_slp_real.cpp  mex_stokes_slp_stress_kspace.cpp  mex_stokes_slp_stress_kspace_old.cpp  mex_stokes_slp_stress_real.cpp  mex_stokes_slp_vorticity_kspace.cpp  mex_stokes_slp_vorticity_real.cpp
PeriodicEwald/src/mex/common/: bessellib.cpp  bessellib.h  ewald_tools.cpp  ewald_tools.h  mm_mxmalloc.h
PeriodicEwald/tests/: K0_test.m  Stokes_DLP_Ewald_2p_test.m  Stokes_SLP_Ewald_2p_test.m  consistency_test.m  direct_sums_gradient_test.m  direct_sums_pressure_test.m  direct_sums_test.m  initewald.m  stresslet_identity_test.m  timings_test.m
PeriodicEwald/tests/consistency_checks/: consistency_test_gradient.m  consistency_test_pressure.m  consistency_test_pressure_gradient.m  consistency_test_stress.m  consistency_test_velocity.m  consistency_test_vorticity.m
PeriodicEwald/tests/direct_sums/: direct_sums_gradient_test.m  direct_sums_pressure_grad_test.m  direct_sums_pressure_test.m  direct_sums_stress_test.m  direct_sums_velocity_test.m  direct_sums_vorticity_test.asv  direct_sums_vorticity_test.m
PeriodicEwald/tests/direct_sums/matlab_sums/: stokes_dlp_gradient_kspace_ds.m  stokes_dlp_gradient_real_ds.m  stokes_dlp_kspace_ds.m  stokes_dlp_pressure_grad_kspace_ds.m  stokes_dlp_pressure_grad_real_ds.m  stokes_dlp_pressure_kspace_ds.m  stokes_dlp_pressure_real_ds.m  stokes_dlp_real_ds.m  stokes_dlp_stress_kspace_ds.m  stokes_dlp_stress_real_ds.m  stokes_dlp_vorticity_kspace_ds.m  stokes_dlp_vorticity_real_ds.m  stokes_slp_gradient_kspace_ds.m  stokes_slp_gradient_real_ds.m  stokes_slp_pressure_grad_kspace_ds.m  stokes_slp_pressure_grad_real_ds.m  stokes_slp_pressure_kspace_ds.m  stokes_slp_pressure_real_ds.m  stokes_slp_stress_kspace_ds.m  stokes_slp_stress_real_ds.m  stokes_slp_vorticity_kspace_ds.m  stokes_slp_vorticity_real_ds.m
PeriodicEwald/tests/matlab_sums/: K0fourier_DS.m  K0real_DS.m  stokes_dlp_kspace_ds.m  stokes_dlp_real_ds.m  stokes_slp_gradient_kspace_ds.m  stokes_slp_kspace_ds.m  stokes_slp_pressure_kspace_ds.m  stokes_slp_pressure_real_ds.m  stokes_slp_real_ds.m
